--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-web": "0.17.7",
-    "react-native-safe-area-context": "4.2.4"
+    "react-native-safe-area-context": "4.2.4",
+    "expo-updates": "~0.13.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
