--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@testing-library/react-native": "^11.3.0",
     "expo": "~45.0.0",
+    "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
     "jest": "^26.6.3",
@@ -27,13 +30,12 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-flash-message": "^0.3.1",
+    "react-native-maps": "0.30.2",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "react-native-maps": "0.30.2",
-    "expo-location": "~14.2.2"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
